# xelis-vm

./: Cargo.toml  README.md  lib.xel  priority.xel  program.xel  tests.xel
examples/: factorial.xel  fizzbuzz.xel  tests.xel
src/: environment.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  operator.rs  parser.rs  value_type.rs
src/vm/: environment.rs  interpreter.rs  lexer.rs  mod.rs  operator.rs  parser.rs  value_type.rs  verifier.rs
