[package]
name = "xelis-vm"
version = "0.1.0"
authors = ["Slixe <slixeprivate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
num-bigint = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.14"